Spring MVC realization for meals